Fix layout bugs

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 100px;
+  margin-bottom: 40px;
 }
 
 a {
@@ -15,11 +15,10 @@ a {
 }
 
 article {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 h1, h2, h3, h4 {
     color: $green;
     font-family: $header-font-family;
 }
-
