--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,7 @@
   height: 50px;
   padding: 15px 15px 15px 0;
   font-size: 18px;
-  line-height: 20px;     
+  line-height: 20px;
 }
 
 .navbar-custom {
@@ -101,7 +101,7 @@
       border-color: white;
       background-color: white;
       color: $blue;
-      
+
       &:active {
         background-color: white;
         border-color: $light-grey;
@@ -155,6 +155,8 @@
 
 .specialties {
   margin-top: 40px;
+  padding-bottom: 40px;
+  background: #f5f5f5;
 }
 
 .price {
